<resources>
    <string name="app_name">Ludi</string>
    <string name="leak_canary_test_class_name">strikt.api.expectThat</string>
    <string name="on_boarding_games_page_title">Tell us about your favourite games</string>
    <string name="on_boarding_genres_page_title">What are your favourite game genres</string>
    <string name="genres_page_genre_on_state_desc">Unselect genre %1$s</string>
    <string name="genres_page_genre_off_state_desc">Select genre %1$s</string>
    <string name="games_page_clear_search_query_desc">Clear search query</string>
    <string name="games_page_search_field_desc">Search for a specific game</string>
    <string name="games_page_game_content_desc">%1$s, Rated: %2$f stars</string>
    <string name="games_page_game_on_state_desc">Remove %1$s from your favourite games</string>
    <string name="games_page_game_off_state_desc">Add %1$s to your favourite games</string>
    <string name="data_sources_page_data_source_on_state_desc">Unfollow %1$s RSS feed</string>
    <string name="data_sources_page_data_source_off_state_desc">Follow %1$s RSS feed</string>
    <string name="on_boarding_data_sources_page_title">Follow your favorite news sources</string>
    <string name="on_boarding_secondary_text">You can always change that later</string>
    <string name="on_boarding_fab_state_continue">Continue</string>
    <string name="on_boarding_fab_state_continue_state_desc">Continue</string>
    <string name="on_boarding_fab_state_skip">Skip</string>
    <string name="on_boarding_fab_state_skip_state_desc">Skip Onboarding and navigate to home screen</string>
    <string name="on_boarding_fab_state_finish">Finish</string>
    <string name="on_boarding_fab_state_finish_state_desc">Save my preferences and finish Onboarding</string>
    <string name="games_page_selected_label">Selected</string>
    <string name="games_page_suggestions_label">Suggestions</string>
    <string name="deals_label">Deals</string>
    <string name="giveaways_label">Giveaways</string>
    <string name="close_filters">Close</string>
    <string name="deals_search_filter_bar_placeholder">Search for a specific deal</string>
    <string name="deals_filter_icon_content_description">Show filters</string>
    <string name="now">now</string>
    <string name="news_no_releases_to_show">No New Releases to show</string>
    <string name="news_no_news_to_show">No New News to show</string>
    <string name="news_no_reviews_to_show">No New Reviews to show</string>
</resources>